add two ways input google font style.

--- a/src/components/todolist/todolist.html
+++ b/src/components/todolist/todolist.html
@@ -1,9 +1,9 @@
 <div class="todo-wrapper">
-    <h2>You've got <span class="emphasis">{{getTotalTodos()}}</span> things to do</h2>
+    <h2>You've got <span class="emphasis font-effect-fire-animation">{{getTotalTodos()}}</span> things to do</h2>
     <ul>
         <li ng-repeat="todo in todos">
             <input type="checkbox" ng-model="todo.done"/>
-            <span class="done-{{todo.done}}">{{todo.text}}</span>
+            <span class="done-{{todo.done}} font-effect-shadow-multiple">{{todo.text}}</span>
         </li>
     </ul>
     <form>
