--- a/src/components/todolist/todolist.less
+++ b/src/components/todolist/todolist.less
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Spicy+Rice&effect=shadow-multiple&.css');
+
 .todo-wrapper {
   width: 100%;
 }
@@ -11,6 +13,7 @@ h2 {
 }
 
 .emphasis {
+  font-family: 'Niramit', serif;
   font-size: 2em;
 }
 
@@ -20,7 +23,7 @@ ul {
 }
 
 li {
-  font-size: 1em;
+  font-size: 2em;
   padding: 20px;
 
   list-style-type: none;
